# plutus-equality-values-testsuite

./: .gitignore  README.md  cabal.project  equalityValues.cabal
app/: deploy.hs
src/: Test.hs
