cabal-version:      2.4
Name:               equalityValues
Version:            0.1.0.0
Author:             Manuel Padilla
Maintainer:         manuelpad@gmail.com
Build-Type:         Simple
Copyright:          © 2022 Manuel Padilla
License:            Apache-2.0
License-files:      LICENSE

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors
    
library
  hs-source-dirs:      src
  exposed-modules:     Test
  --------------------
  -- Local components
  --------------------
  build-depends:  
                     cardano-api           
                     , cardano-addresses
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , cardano-ledger-alonzo
                     , cardano-ledger-babbage
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , data-default
                     , playground-common
                     , plutonomy
                     , plutus-chain-index-core
                     , plutus-contract
                     , plutus-core
                     , plutus-ledger
                     , plutus-ledger-api       
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-pab
                     , plutus-tx               
                     , plutus-tx-plugin       

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
                       aeson
                     , base ^>= 4.14.1.0
                     , base16-bytestring
                     , bech32
                     , bytestring
                     , containers
                     , freer-extras
                     , freer-simple
                     , filepath
                     , lens
                     , openapi3
                     , prettyprinter
                     , regex
                     , serialise
                     , split
                     , text
                     , hex-text
                     , stm 
                     , old-locale
                     , time
                     , utf8-string
                     , directory
                     , MissingH
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable test
  main-is: test.hs
  hs-source-dirs:
      app
  build-depends:
      base ^>=4.14.1.0,
      network,
      equalityValues
  default-language: Haskell2010

